@@ -514,7 +514,7 @@
 <!ENTITY udev-ch6-du "10 MB">
 <!ENTITY udev-ch6-sbu "0.2 SBU">
 
-<!ENTITY udev-config "udev-config-20080522"> <!-- Scripts depend on this format -->
+<!ENTITY udev-config "udev-config-20081015"> <!-- Scripts depend on this format -->
 <!ENTITY udev-config-size "UDEV-SIZE KB">    <!-- Updated in Makefile -->
 <!ENTITY udev-config-url "&downloads-root;&udev-config;.tar.bz2">
 <!ENTITY udev-config-md5 "UDEV-MD5SUM">      <!-- Updated in Makefile -->
