@@ -99,3 +99,7 @@ KERNEL=="pt[0-9]*",     GROUP="tape"
 KERNEL=="npt[0-9]*",    GROUP="tape"
 KERNEL=="st[0-9]*",     GROUP="tape"
 KERNEL=="nst[0-9]*",    GROUP="tape"
+
+# Override floppy devices
+KERNEL=="fd[0-9]",    GROUP="floppy"
+KERNEL=="fd[0-9]", ACTION=="add", ATTRS{cmos}=="?*", RUN+="create_floppy_devices -c -t $attr{cmos} -m %M -M 0660 -G floppy $root/%k"
