@@ -1,3 +1,8 @@
+2008-10-14	DJ Lucas	<dj@linuxfromscratch.org>
+	* 55-lfs.rules: Override default perms on floppy disk devices provided
+	  by 50-udev-default.rules.  Thanks to Bruce Dubbs for the fix.  Closes
+	  LFS ticket #2076. 
+
 2008-05-21	Bryan Kadzban	<bryan@linuxfromscratch.org>
 	* 81-firmware.rules, doc/81-firmware.txt: Remove.  This rule is
 	  already handled by udev's 50-udev-default.rules file.  The docs
